Corrections according to PMD results.